--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1042,6 +1042,10 @@ a {
   height: 0.75rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1076,6 +1080,10 @@ a {
 
 .w-3 {
   width: 0.75rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .max-w-xl {
@@ -2095,6 +2103,10 @@ a {
     height: 18rem;
   }
 
+  .md\:h-5 {
+    height: 1.25rem;
+  }
+
   .md\:w-full {
     width: 100%;
   }
@@ -2105,6 +2117,10 @@ a {
 
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-5 {
+    width: 1.25rem;
   }
 
   .md\:max-w-3xl {
@@ -2394,12 +2410,30 @@ a {
     display: inline;
   }
 
+  .xl\:h-5 {
+    height: 1.25rem;
+  }
+
+  .xl\:w-5 {
+    width: 1.25rem;
+  }
+
   .xl\:object-fill {
     object-fit: fill;
   }
 
   .xl\:p-10 {
     padding: 2.5rem;
+  }
+
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .xl\:pr-16 {
